# Tome

./: .gitattributes  .gitignore  README.md  components.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.check.json  vite.config.ts  vitest.config.ts
.github/workflows/: automerge.yml  ci.yml  release.yml
.husky/: pre-commit  pre-push
e2e/: smoke.spec.ts
scripts/: test-smoke.cjs
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  pdf.rs  reader.rs  scan.rs
src-tauri/tests/: pdf_cache_test.rs
src/__tests__/: app-settings-panel.test.ts  book-config.test.ts  book-doc.test.ts  concurrency-limiter.test.ts  document-loader.test.ts  parse-utils.test.ts  pdf-ensure-render-page.test.ts  pdf-page-cache-eviction.test.ts  pdf-page-item.test.ts  reader-page.test.ts  render-window.test.ts
src/components/layout/: MainLayout.tsx  ThemeSwitcher.tsx  TitleBar.tsx
src/components/reader/: ChapterNav.tsx  ControlOverlay.tsx  EpubScrollView.tsx  PdfReaderView.tsx  ReaderAdapter.tsx  ReaderErrorBoundary.tsx  ReaderPage.tsx  ReaderView.tsx  (+3 more)
src/lib/: book-config.ts  book-doc.ts  concurrency-limiter.ts  cover-gen.ts  document-loader.ts  epub-meta.ts  foliate.ts  logger.ts  parse-utils.ts  pdf-meta.ts  render-window.ts  tauri-bridge.ts  tauri-store.ts  txt-parser.ts
src/stores/: library.ts  reader.ts  settings.ts
src/styles/: globals.css
src/test/: setup.ts
(+3 files in other folders)
