[package]
name = "tome"
version = "0.1.0"
edition = "2021"

[lib]
name = "tome_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chardetng = "0.1"
encoding_rs = "0.8"
regex = "1"
pdfium-render = { version = "0.8", features = ["sync"] }
image = "0.25"
base64 = "0.22"
